--- a/style/less/g3w-skins/green/g3w-queryresults.less
+++ b/style/less/g3w-skins/green/g3w-queryresults.less
@@ -39,8 +39,8 @@
         color: @green;
       }
       .field_link {
-        background-color: @green !important;
-        border-color: @green !important;
+        background-color: lighten(@green, 10%) !important;
+        border-color: lighten(@green, 10%) !important;
       }
       .queryresults-single {
         span.key {
