--- a/style/less/g3w-skins/green/g3w-viewport.less
+++ b/style/less/g3w-skins/green/g3w-viewport.less
@@ -9,7 +9,7 @@
         }
       }
       .close-panel-block {
-        button {
+        .panel-icon {
           color: darken(@green, 20%);
         }
       }
