--- a/style/less/g3w-skins/yellow/g3w-queryresults.less
+++ b/style/less/g3w-skins/yellow/g3w-queryresults.less
@@ -39,8 +39,8 @@
         color: @yellow;
       }
       .field_link {
-        background-color: @yellow !important;
-        border-color: @yellow !important;
+        background-color: lighten(@yellow, 10%) !important;
+        border-color: lighten(@yellow, 10%) !important;
       }
       .queryresults-single {
         span.key {
