--- a/style/less/admin-lte2-less/header.less
+++ b/style/less/admin-lte2-less/header.less
@@ -56,6 +56,15 @@
         border: 0;
       }
     }
+    &.app-navbar-nav {
+      li {
+        font-weight: bold;
+        border-bottom: 1px solid rgba(255,255,255,0.2);
+        &:last-child {
+          border: 0;
+        }
+      }
+    }
   }
   .navbar-right {
     @media (max-width: @screen-header-collapse) {
