--- a/style/less/g3w-skins/blue/g3w-queryresults.less
+++ b/style/less/g3w-skins/blue/g3w-queryresults.less
@@ -39,7 +39,7 @@
         color: @light-blue;
       }
       .field_link {
-        background-color: @light-blue !important;
+        background-color: lighten(@light-blue, 10%) !important;
         border-color: #ffffff;
       }
       .queryresults-single {
