--- a/style/less/g3w-skins/green/g3w-header.less
+++ b/style/less/g3w-skins/green/g3w-header.less
@@ -3,6 +3,12 @@
     background-color: @green;
     border-bottom: 1px solid @green;
   }
+  .navbar-inverse .navbar-toggle:focus, .navbar-inverse .navbar-toggle:hover {
+    background-color: darken(@green, 10%);
+  }
+  .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
+    border-color: darken(@green, 10%);
+  }
 }
 
 
