--- a/style/less/g3w-viewport.less
+++ b/style/less/g3w-viewport.less
@@ -42,12 +42,34 @@
       }
     }
     .close-panel-block {
-      line-height: 1.5;
-      margin: 0;
-      .close-panel-button {
-        margin-bottom: 3px
+      overflow: hidden;
+      line-height: 14px;
+      margin-top: 4px;
+      font-size:1.5em;
+      .panel-title {
+        margin-top: 5px;
+      }
+      span {
+        i.panel-button {
+          color: transparent;
+        }
+        &.g3w-span-button {
+          height: 1.5em;
+          line-height: 1.5em;
+          width: 1.5em;
+          font-size: 1em !important;
+          margin: 3px;
+          cursor: pointer;
+          box-shadow:  0 2px 4px rgba(0,0,0,0.2);
+          -moz-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+          -webkit-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+          -o-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+          border-radius: 50%;
+        }
+
       }
     }
+
     #contenttitle {
       font-weight: bold;
     }
