--- a/style/less/g3w-metadata.less
+++ b/style/less/g3w-metadata.less
@@ -1,3 +1,6 @@
+.metadata-item-tab.general:hover {
+  background-color: @light-blue;
+}
 .metadata-item-tab.general {
   background-color: @light-blue;
 }
