--- a/style/less/g3w-mapcontrols.less
+++ b/style/less/g3w-mapcontrols.less
@@ -1,10 +1,10 @@
 .ol-control, .ol-custom-overviewmap {
   background-color: transparent;
-  border-radius: 0px;
-  padding: 0px;
+  border-radius: 0;
+  padding: 0;
   button {
     display: block;
-    margin: 0px;
+    margin: 0;
     margin-left: 2px;
     padding: 2px 6px;
     text-decoration: none;
@@ -137,8 +137,14 @@
 }
 
 .ol-rotate {
-  top: 0;
+  top: 50px;
   left: 0;
+  button {
+    box-shadow: 0 3px 5px rgba(0,0,0,0.5);
+    span {
+      font-weight: bold;
+    }
+  }
 }
 
 .ol-hidden {
