changed some css and chenged applicationui to use computed and removed datatbale to sdk

--- a/style/less/app.less
+++ b/style/less/app.less
@@ -21,6 +21,23 @@
   top: 60px;
 }
 
+table.dataTable > tbody > tr.child ul.dtr-details > li {
+  border-bottom: 0 !important;
+}
+// credits
+.credit-title-logo {
+  font-size: 1.1em;
+  margin-bottom: 15px;
+}
+.g3w-credits-block {
+  text-align: center!important;
+  margin-bottom: 20px;
+}
+.g3w-suite-logo {
+  width: 50% !important;
+}
+
+
 
 // core less styles
 @import "g3w-custom-fonts";
