--- a/style/less/g3w-search.less
+++ b/style/less/g3w-search.less
@@ -2,4 +2,11 @@
   input {
     border-radius: .25rem;
   }
+  #dosearch {
+    &:hover {
+      color: #ffffff;
+    }
+    color: #ffffff;
+    font-weight: bold;
+  }
 }
