--- a/style/less/g3w-viewport.less
+++ b/style/less/g3w-viewport.less
@@ -48,6 +48,7 @@
       font-size:1.5em;
       .panel-title {
         margin-top: 5px;
+        font-size: 1em;
       }
       span {
         i.panel-button {
