added skin less files specific fro skin and some improvement to manage credits

--- a/style/less/app.less
+++ b/style/less/app.less
@@ -36,6 +36,10 @@ table.dataTable > tbody > tr.child ul.dtr-details > li {
 .g3w-suite-logo {
   width: 50% !important;
 }
+.customcredits {
+  margin-bottom : 10px;
+  margin-top: 5px;
+}
 
 
 
@@ -66,8 +70,9 @@ table.dataTable > tbody > tr.child ul.dtr-details > li {
 @import "g3w-metadata";
 
 // custom g3w less skin styles
-
+@import "g3w-skins/g3w-skin";
 // blue
+@import "g3w-skins/blue/g3w-skin";
 @import "g3w-skins/blue/g3w-overwrite-external";
 @import "g3w-skins/blue/g3w-mapcontrols";
 @import "g3w-skins/blue/g3w-catalog";
@@ -84,6 +89,7 @@ table.dataTable > tbody > tr.child ul.dtr-details > li {
 @import "g3w-skins/blue/g3w-tabs-form-query";
 
 //yellow
+@import "g3w-skins/yellow/g3w-skin";
 @import "g3w-skins/yellow/g3w-overwrite-external";
 @import "g3w-skins/yellow/g3w-mapcontrols";
 @import "g3w-skins/yellow/g3w-catalog";
@@ -100,6 +106,7 @@ table.dataTable > tbody > tr.child ul.dtr-details > li {
 @import "g3w-skins/yellow/g3w-tabs-form-query";
 
 //red
+@import "g3w-skins/red/g3w-skin";
 @import "g3w-skins/red/g3w-overwrite-external";
 @import "g3w-skins/red/g3w-mapcontrols";
 @import "g3w-skins/red/g3w-catalog";
@@ -116,6 +123,7 @@ table.dataTable > tbody > tr.child ul.dtr-details > li {
 @import "g3w-skins/red/g3w-tabs-form-query";
 
 //purple
+@import "g3w-skins/purple/g3w-skin";
 @import "g3w-skins/purple/g3w-overwrite-external";
 @import "g3w-skins/purple/g3w-mapcontrols";
 @import "g3w-skins/purple/g3w-catalog";
@@ -132,6 +140,7 @@ table.dataTable > tbody > tr.child ul.dtr-details > li {
 @import "g3w-skins/purple/g3w-tabs-form-query";
 
 //green
+@import "g3w-skins/green/g3w-skin";
 @import "g3w-skins/green/g3w-overwrite-external";
 @import "g3w-skins/green/g3w-mapcontrols";
 @import "g3w-skins/green/g3w-catalog";
