--- a/style/less/g3w-skins/blue/g3w-viewport.less
+++ b/style/less/g3w-skins/blue/g3w-viewport.less
@@ -2,6 +2,12 @@
   .g3w-viewport {
     .g3w-view {
       &.content {
+        .table-header-tool {
+          background-color: @light-blue;
+        }
+        .action-button-icon {
+          color: @light-blue;
+        }
         .g3w_contents_back {
           >span {
             color: @light-blue;
