--- a/style/less/g3w-viewport.less
+++ b/style/less/g3w-viewport.less
@@ -14,6 +14,27 @@
       //transition: all 0.1s;
     }
     &.content {
+      .table-header-tool {
+        padding: 10px;
+        color: #ffffff;
+        font-size: 1.3em;
+      }
+      .action-button {
+        display:inline-block;
+        text-align: center;
+        text-shadow: 0 3px 5px rgba(0,0,0,0.3);
+        padding: 2px;
+        cursor: pointer;
+        &:hover {
+          background-color: #ffffff;
+        }
+      }
+      .action-button-icon {
+        padding-top: 2px;
+        font-weight: bold;
+        text-decoration: none;
+      }
+
       line-height: normal;
       float:right;
       overflow-wrap: break-word;
@@ -24,6 +45,7 @@
       position: relative;
       .contents {
         height: 100%;
+        padding-left: 0;
       }
       &.split-h {
         border-left: 1px solid darken(@gray-lighter, 10%);
@@ -47,7 +69,8 @@
       margin-top: 4px;
       font-size:1.5em;
       .panel-title {
-        margin-top: 5px;
+        margin-top: 10px;
+        margin-bottom: 10px;
         font-size: 1em;
       }
       span {
@@ -75,4 +98,5 @@
       font-weight: bold;
     }
   }
+
 }
