removed nano nano content e setted slimscroll to sidebar to false

--- a/style/less/g3w-skins/blue/g3w-skin.less
+++ b/style/less/g3w-skins/blue/g3w-skin.less
@@ -1,11 +1,14 @@
 .skin-blue {
+  .skin-border-color {
+    border-color: @light-blue;
+  }
   .skin-button {
     background: @light-blue;
     &.lighten {
       background: lighten(@light-blue, 30%);
     }
     &.bordered {
-      border-color: @light-blue;
+      .skin-border-color();
     }
     &.focus {
       border:0;
