--- a/style/less/g3w-skins/purple/g3w-skin.less
+++ b/style/less/g3w-skins/purple/g3w-skin.less
@@ -1,11 +1,14 @@
 .skin-purple {
+  .skin-border-color {
+    border-color: @purple;
+  }
   .skin-button {
     background: @purple;
     &.lighten {
       background: lighten(@purple, 30%);
     }
     &.bordered {
-      border-color: @purple;
+      .skin-border-color();
     }
     &.focus {
       border:0;
