--- a/style/less/g3w-skins/red/g3w-skin.less
+++ b/style/less/g3w-skins/red/g3w-skin.less
@@ -1,11 +1,14 @@
 .skin-red {
+  .skin-border-color {
+    border-color: @red;
+  }
   .skin-button {
     background: @red;
     &.lighten {
       background: lighten(@red, 30%);
     }
     &.bordered {
-      border-color: @red;
+      .skin-border-color();
     }
     &.focus {
       border:0;
