--- a/style/less/g3w-queryresults.less
+++ b/style/less/g3w-queryresults.less
@@ -143,7 +143,11 @@
         >span {
           padding-left: 5px;
         }
+        &.right {
+          text-align: right;
+        }
       }
+
     }
     tr.featurebox-header-open + .featurebox-body  {
       > td > div, td > table {
