fixed proble to user header and added some skins class

--- a/style/less/g3w-skins/blue/g3w-skin.less
+++ b/style/less/g3w-skins/blue/g3w-skin.less
@@ -2,6 +2,9 @@
   .skin-border-color {
     border-color: @light-blue;
   }
+  .skin-background-color {
+    background-color: @light-blue;
+  }
   .skin-button {
     background: @light-blue;
     &.lighten {
