--- a/style/less/g3w-skins/red/g3w-skin.less
+++ b/style/less/g3w-skins/red/g3w-skin.less
@@ -2,6 +2,9 @@
   .skin-border-color {
     border-color: @red;
   }
+  .skin-background-color {
+    background-color: @red;
+  }
   .skin-button {
     background: @red;
     &.lighten {
