--- a/style/less/g3w-skins/blue/g3w-skin.less
+++ b/style/less/g3w-skins/blue/g3w-skin.less
@@ -20,11 +20,21 @@
   .skin-color {
     color: @light-blue;
   }
-  .skin-tooltip-top + .tooltip.top .tooltip-inner {
-    background-color:@light-blue;
-    font-weight: bold;
+  .skin-tooltip-top + .tooltip.top, .skin-tooltip-left + .tooltip.left  {
+    .tooltip-inner {
+      background-color:@light-blue;
+      font-weight: bold;
+    }
+
   }
-  .skin-tooltip-top + .tooltip.top .tooltip-arrow {
-    border-top-color: @light-blue;
+  .skin-tooltip-top + .tooltip.top {
+    .tooltip-arrow {
+      border-top-color: @light-blue;
+    }
+  }
+  .skin-tooltip-left + .tooltip.left {
+    .tooltip-arrow {
+      border-left-color: @light-blue;
+    }
   }
 }
