added some skin css

--- a/style/less/g3w-skins/blue/g3w-overwrite-external.less
+++ b/style/less/g3w-skins/blue/g3w-overwrite-external.less
@@ -3,4 +3,10 @@
     border: @light-blue;
     background: @light-blue;
   }
+  .magic-radio+label:after {
+    background: @light-blue;
+  }
+  .magic-radio:checked+label:before {
+    border-color: @light-blue;
+  }
 }
