--- a/style/less/g3w-skins/green/g3w-overwrite-external.less
+++ b/style/less/g3w-skins/green/g3w-overwrite-external.less
@@ -3,4 +3,10 @@
     border: @green;
     background: @green;
   }
+  .magic-radio+label:after {
+    background: @green;
+  }
+  .magic-radio:checked+label:before {
+    border-color: @green;
+  }
 }
