--- a/style/less/g3w-skins/purple/g3w-overwrite-external.less
+++ b/style/less/g3w-skins/purple/g3w-overwrite-external.less
@@ -3,4 +3,10 @@
     border: @purple;
     background: @purple;
   }
+  .magic-radio+label:after {
+    background: @purple;
+  }
+  .magic-radio:checked+label:before {
+    border-color: @purple;
+  }
 }
