--- a/style/less/g3w-skins/red/g3w-overwrite-external.less
+++ b/style/less/g3w-skins/red/g3w-overwrite-external.less
@@ -3,4 +3,10 @@
     border: @red;
     background: @red;
   }
+  .magic-radio+label:after {
+    background: @red;
+  }
+  .magic-radio:checked+label:before {
+    border-color: @red;
+  }
 }
