--- a/style/less/g3w-skins/yellow/g3w-overwrite-external.less
+++ b/style/less/g3w-skins/yellow/g3w-overwrite-external.less
@@ -3,4 +3,10 @@
     border: @yellow;
     background: @yellow;
   }
+  .magic-radio+label:after {
+    background: @yellow;
+  }
+  .magic-radio:checked+label:before {
+    border-color: @yellow;
+  }
 }
