--- a/style/less/g3w-core.less
+++ b/style/less/g3w-core.less
@@ -59,17 +59,28 @@
 }
 
 .g3w-icon {
+  box-shadow:  0 2px 4px rgba(0,0,0,0.2);
+  -moz-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+  -webkit-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+  -o-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
   &:hover {
     cursor: pointer;
+  }
+
+  &.trash {
+    color:red !important;
+  }
+
+  &.no-shadow {
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none ;
+    box-shadow: none;
   }
 
   padding: 5px;
   font-size: 1.3em;
   border-radius: 50%;
-  box-shadow:  0 2px 4px rgba(0,0,0,0.2);
-  -moz-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-  -webkit-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-  -o-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+
 }
 
 
