--- a/style/less/g3w-viewport.less
+++ b/style/less/g3w-viewport.less
@@ -37,6 +37,9 @@
         }
       }
       .action-button-icon {
+        &.trash {
+          color:red !important;
+        }
         padding-top: 2px;
         font-weight: bold;
         text-decoration: none;
