renamed font icons and added some style rules

--- a/style/less/g3w-map.less
+++ b/style/less/g3w-map.less
@@ -27,3 +27,10 @@
   opacity: 0;
   cursor: pointer;
 }
+
+.hidemap {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #ffffff;
+}
