--- a/style/less/g3w-custom-fonts.less
+++ b/style/less/g3w-custom-fonts.less
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?x2apei');
-  src:  url('../fonts/icomoon.eot?x2apei#iefix') format('embedded-opentype'),
-  url('../fonts/icomoon.ttf?x2apei') format('truetype'),
-  url('../fonts/icomoon.woff?x2apei') format('woff'),
-  url('../fonts/icomoon.svg?x2apei#icomoon') format('svg');
+  src:  url('../fonts/iconmoon.eot?o036jp');
+  src:  url('../fonts/iconmoon.eot?o036jp#iefix') format('embedded-opentype'),
+  url('../fonts/iconmoon.ttf?o036jp') format('truetype'),
+  url('../fonts/iconmoon.woff?o036jp') format('woff'),
+  url('../fonts/iconmoon.svg?o036jp#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -104,6 +104,10 @@
 }
 .g3w-plus:before {
   content: "\ea0a";
+}
+
+.g3w-camera:before {
+  content: "\e90f"
 }
 
 .g3w-mini-relation-icon {
