--- a/style/less/g3w-mapcontrols_hovers.less
+++ b/style/less/g3w-mapcontrols_hovers.less
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'icomoon';
-    src:    url('../../fonts/icomoon.eot?fhfhx9');
-    src:    url('../../fonts/icomoon.eot?fhfhx9#iefix') format('embedded-opentype'),
-        url('../../fonts/icomoon.ttf?fhfhx9') format('truetype'),
-        url('../../fonts/icomoon.woff?fhfhx9') format('woff'),
-        url('../../fonts/icomoon.svg?fhfhx9#icomoon') format('svg');
+    src:    url('../../fonts/ori/icomoon.eot?fhfhx9');
+    src:    url('../../fonts/ori/icomoon.eot?fhfhx9#iefix') format('embedded-opentype'),
+        url('../../fonts/ori/icomoon.ttf?fhfhx9') format('truetype'),
+        url('../../fonts/ori/icomoon.woff?fhfhx9') format('woff'),
+        url('../../fonts/ori/icomoon.svg?fhfhx9#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
