added fonts and headercustum lin component

--- a/style/less/g3w-header.less
+++ b/style/less/g3w-header.less
@@ -9,6 +9,11 @@
   .navbar-inverse .navbar-toggle:focus, .navbar-inverse .navbar-toggle:hover {
     margin-top: 3px;
   }
+  .customheaderlink {
+    a.imagelink {
+      padding:5px;
+    }
+  }
 }
 
 
