--- a/style/less/g3w-map.less
+++ b/style/less/g3w-map.less
@@ -1,36 +1,50 @@
-#addcustomlayer {
-  margin:30px;
-  position: relative;
-  border: 2px dashed #97A1A8;
+#g3w-maps {
+  postion: relative;
+  width:100%;
+  height:100%;
+  .g3w-map {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    &.show {
+      display: block;
+    }
+    &.hide {
+      display: none;
+    }
+  }
+  .hidemap {
+    //display: none;
+  }
+  #addcustomlayer {
+    margin:30px;
+    position: relative;
+    border: 2px dashed #97A1A8;
+  }
+
+  #addcustomlayer p, #addcustomlayer h4 {
+    text-align: center;
+    line-height: 30px;
+    color: #97A1A8;
+    font-family: Arial;
+  }
+
+  #addcustomlayer div {
+    text-align: center;
+    line-height: 30px;
+    color: #97A1A8;
+  }
+
+  #addcustomlayer input{
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    outline: none;
+    opacity: 0;
+    cursor: pointer;
+  }
 }
 
-#addcustomlayer p, #addcustomlayer h4 {
-  text-align: center;
-  line-height: 30px;
-  color: #97A1A8;
-  font-family: Arial;
-}
 
-#addcustomlayer div {
-  text-align: center;
-  line-height: 30px;
-  color: #97A1A8;
-}
-
-#addcustomlayer input{
-  position: absolute;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  outline: none;
-  opacity: 0;
-  cursor: pointer;
-}
-
-.hidemap {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: #ffffff;
-}
