added disable element to template GUI and chnaged error backgroun image

--- a/style/less/app.less
+++ b/style/less/app.less
@@ -41,7 +41,10 @@ table.dataTable > tbody > tr.child ul.dtr-details > li {
   margin-top: 5px;
 }
 
-
+.g3w-disabled {
+  pointer-events: none;
+  opacity: 0.4;
+}
 
 // core less styles
 @import "g3w-custom-fonts";
