--- a/style/less/g3w-map.less
+++ b/style/less/g3w-map.less
@@ -13,9 +13,7 @@
       display: none;
     }
   }
-  .hidemap {
-    //display: none;
-  }
+  .hidemap {}
   #addcustomlayer {
     margin:30px;
     position: relative;
