fix reload issue on click on mapcotrol and change editing style

--- a/style/less/g3w-editing-panel.less
+++ b/style/less/g3w-editing-panel.less
@@ -4,6 +4,10 @@
     padding: 5px 10px 5px 10px
   }
 
+  .toolboxselected {
+    border-left: 3px solid #FFFFFF;
+  };
+
   .toolbox .dropdown-content {
     display: none;
     position: absolute;
@@ -47,7 +51,7 @@
     }
   }
   .editbtn {
-    margin: 0 5px 0 5px;
+    margin: 0 5px 5px 5px;
     border: 1px solid #3a4448;
     border-radius: 50%;
     padding: 10px;
