--- a/style/less/g3w-skins/purple/g3w-editing-panel.less
+++ b/style/less/g3w-skins/purple/g3w-editing-panel.less
@@ -1,7 +1,7 @@
 .skin-purple {
   .g3w-editing-panel {
     .toolboxselected {
-      border-left: 5px solid @purple;
+      border-left-color: @purple;
     }
     .warning-message {
       color: darken(@purple, 80%);
