--- a/style/less/g3w-skins/blue/g3w-editing-panel.less
+++ b/style/less/g3w-skins/blue/g3w-editing-panel.less
@@ -1,7 +1,7 @@
 .skin-blue {
   .g3w-editing-panel {
     .toolboxselected {
-      border-left: 5px solid @light-blue;
+      border-left-color: @light-blue;
     }
     .warning-message {
       color: darken(@light-blue, 80%);
