--- a/style/less/g3w-skins/green/g3w-editing-panel.less
+++ b/style/less/g3w-skins/green/g3w-editing-panel.less
@@ -1,7 +1,7 @@
 .skin-green{
   .g3w-editing-panel {
     .toolboxselected {
-      border-left: 5px solid @green;
+      border-left-color: @green;
     }
     .warning-message {
       color: darken(@green, 80%);
