--- a/style/less/g3w-skins/red/g3w-editing-panel.less
+++ b/style/less/g3w-skins/red/g3w-editing-panel.less
@@ -1,7 +1,7 @@
 .skin-red {
   .g3w-editing-panel {
     .toolboxselected {
-      border-left: 5px solid @red;
+      border-left-color: @red;
     }
     .warning-message {
       color: darken(@red, 80%);
