--- a/style/less/g3w-skins/yellow/g3w-editing-panel.less
+++ b/style/less/g3w-skins/yellow/g3w-editing-panel.less
@@ -1,7 +1,7 @@
 .skin-yellow {
   .g3w-editing-panel {
     .toolboxselected {
-      border-left: 5px solid @yellow;
+      border-left-color: @yellow;
     }
     .warning-message {
       color: darken(@yellow, 80%);
