fix reload issue on click on mapcotrol and change editing style

--- a/style/less/g3w-catalog.less
+++ b/style/less/g3w-catalog.less
@@ -219,6 +219,7 @@ Licensed under MIT
       }
       div.text-center {
         font-weight: bold;
+        white-space: pre-line;
       }
     }
   }
