--- a/style/less/g3w-skins/blue/g3w-skin.less
+++ b/style/less/g3w-skins/blue/g3w-skin.less
@@ -4,6 +4,9 @@
   }
   .skin-background-color {
     background-color: @light-blue;
+    &.lighten {
+      background-color: lighten(@light-blue, 30%);
+    }
   }
   .skin-button {
     background: @light-blue;
