--- a/style/less/g3w-viewport.less
+++ b/style/less/g3w-viewport.less
@@ -156,6 +156,7 @@
       overflow: hidden;
       line-height: 14px;
       margin-top: 4px;
+      margin-bottom: 10px;
       font-size:1.5em;
       .panel-title {
         margin-top: 10px;
