added chart font icon

--- a/style/less/g3w-viewport.less
+++ b/style/less/g3w-viewport.less
@@ -108,8 +108,9 @@
         display:inline-block;
         text-align: center;
         text-shadow: 0 3px 5px rgba(0,0,0,0.3);
-        padding: 2px;
+        padding: 5px;
         cursor: pointer;
+        border-radius: 5px;
         &:hover {
           background-color: #ffffff;
         }
