added form css rules to child input

--- a/style/less/g3w-form.less
+++ b/style/less/g3w-form.less
@@ -218,6 +218,10 @@
     font-weight: bold;
   }
 
+  .field-child input.form-control {
+    padding-right: 0 !important;
+  }
+
   .g3w-relationname {
     font-size: 1.2em;
     border-top: 1px solid darken(@gray,10%);
