removed image background and adjusted css skin to results in tabs

--- a/style/less/app.less
+++ b/style/less/app.less
@@ -9,6 +9,11 @@
 
 @map-spinner-color: white;
 
+html, body {
+  height: 100%;
+  width: 100%;
+}
+
 .color-light-blue {
   color: @light-blue;
 }
@@ -72,6 +77,7 @@ table.dataTable > tbody > tr.child ul.dtr-details > li {
 @import "g3w-errors";
 @import "g3w-metadata";
 @import "g3w-overwrite-extenal";
+@import "g3w-error-page";
 
 // custom g3w less skin styles
 @import "g3w-skins/g3w-skin";
