--- a/style/less/g3w-form.less
+++ b/style/less/g3w-form.less
@@ -3,6 +3,7 @@
     border-bottom:none;
   }
 
+
   h5.relation_title {
     font-size: 1.2em;
     font-weight: bold;
@@ -216,6 +217,9 @@
   button{
     margin: 0 5px 0 5px;
     font-weight: bold;
+  }
+  .tab-node.group .sub-group {
+    background-color: #f9f9f9;
   }
 
   .field-child input.form-control {
