--- a/style/less/g3w-queryresults.less
+++ b/style/less/g3w-queryresults.less
@@ -7,8 +7,11 @@
       margin-left: -2px;
       margin-right: -2px;
     }
-    .sub-group .group > .row:nth-child(odd) {
-      background-color: #ffffff;
+    .tab-node.group {
+      .row {
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+      }
     }
     .field_link {
       border-radius: 5px;
@@ -18,6 +21,19 @@
       font-weight: bold;
     }
     .queryresults {
+      .tab-node.group {
+        .row > div {
+          padding-left: 0;
+          padding-right: 15px;
+        }
+        .row > div:last-child {
+          padding-right: 0;
+        }
+        .row:nth-child(odd) {
+          background-color: #FFFFFF ;
+        }
+      }
+
       table {
         tbody {
           > tr.featurebox-header {
