--- a/style/less/g3w-skins/blue/g3w-queryresults.less
+++ b/style/less/g3w-skins/blue/g3w-queryresults.less
@@ -4,9 +4,19 @@
       color: @light-blue;
     }
   }
-  .queryresults-wrapper{
+  .queryresults-wrapper {
+
     .queryresults-container {
       .queryresults {
+        .tab-node.group  {
+          .row:nth-child(even) {
+            background-color: lighten(@light-blue, 48%) !important;
+          }
+          .sub-group {
+            background-color: lighten(@light-blue, 48%) !important;
+          }
+        }
+
         .query_relation_field_message {
          color: @light-blue;
         }
