--- a/style/less/g3w-skins/green/g3w-queryresults.less
+++ b/style/less/g3w-skins/green/g3w-queryresults.less
@@ -4,9 +4,20 @@
       color: @green;
     }
   }
-  .queryresults-wrapper{
+  .queryresults-wrapper {
+
     .queryresults-container {
       .queryresults {
+
+        .tab-node.group {
+          .row:nth-child(even) {
+            background-color: lighten(@green, 50%) !important;
+          }
+          .sub-group {
+            background-color: lighten(@green, 50%) !important;
+          }
+        }
+
         .query_relation_field_message {
           color: @green;
         }
