--- a/style/less/g3w-skins/purple/g3w-queryresults.less
+++ b/style/less/g3w-skins/purple/g3w-queryresults.less
@@ -7,6 +7,16 @@
   .queryresults-wrapper{
     .queryresults-container {
       .queryresults {
+
+        .tab-node.group {
+          .row:nth-child(even) {
+            background-color: lighten(@purple, 50%) !important;
+          }
+          .sub-group {
+            background-color: lighten(@purple, 50%) !important;
+          }
+        }
+
         .query_relation_field_message {
           color: @purple;
         }
