--- a/style/less/g3w-skins/red/g3w-queryresults.less
+++ b/style/less/g3w-skins/red/g3w-queryresults.less
@@ -7,6 +7,14 @@
   .queryresults-wrapper{
     .queryresults-container {
       .queryresults {
+        .tab-node.group {
+          .row:nth-child(even) {
+            background-color: lighten(@red, 39%) !important;
+          }
+          .sub-group {
+            background-color: lighten(@red, 39%) !important;
+          }
+        }
         .query_relation_field_message {
           color: @red;
         }
