added style skin class

--- a/style/less/g3w-queryresults.less
+++ b/style/less/g3w-queryresults.less
@@ -181,6 +181,9 @@
     }
 
     .featurebox-body {
+      table.fieldsoutofstructure {
+        border:0 !important;
+      }
       @media (max-width: 768px) {
         .field_value.col-sm-6, .field_label.col-sm-6 {
           width: 50% !important;
@@ -212,7 +215,7 @@
         width: 30%;
         max-width: 40%;
       }
-      .attr-value {
+      .attr-value, .field_value {
         font-weight: bold
       }
     }
