--- a/style/less/g3w-skins/green/g3w-queryresults.less
+++ b/style/less/g3w-skins/green/g3w-queryresults.less
@@ -42,7 +42,7 @@
         border-top-color: @green;
       }
 
-      table.feature_attributes tr:nth-child(even) {
+      table.feature_attributes tr:nth-child(even), table.fieldsoutofstructure tr:nth-child(even) {
         background: fade(@green, 10%) !important;
       }
 
