--- a/style/less/g3w-skins/green/g3w-skin.less
+++ b/style/less/g3w-skins/green/g3w-skin.less
@@ -4,6 +4,9 @@
   }
   .skin-background-color {
     background-color: @green;
+    &.lighten {
+      background-color: lighten(@green, 30%);
+    }
   }
   .skin-button {
     background: @green;
