--- a/style/less/g3w-skins/red/g3w-skin.less
+++ b/style/less/g3w-skins/red/g3w-skin.less
@@ -4,6 +4,9 @@
   }
   .skin-background-color {
     background-color: @red;
+    &.lighten {
+      background-color: lighten(@red, 30%);
+    }
   }
   .skin-button {
     background: @red;
