--- a/style/less/g3w-skins/yellow/g3w-skin.less
+++ b/style/less/g3w-skins/yellow/g3w-skin.less
@@ -4,6 +4,9 @@
   }
   .skin-background-color {
     background-color: @yellow;
+    &.lighten {
+      background-color: lighten(@yellow, 30%);
+    }
   }
   .skin-button {
     background: @yellow;
