--- a/style/less/g3w-skins/blue/g3w-queryresults.less
+++ b/style/less/g3w-skins/blue/g3w-queryresults.less
@@ -41,7 +41,7 @@
         border-top-color: @light-blue;
       }
 
-      table.feature_attributes tr:nth-child(even) {
+      table.feature_attributes tr:nth-child(even), table.fieldsoutofstructure tr:nth-child(even) {
         background: fade(@light-blue, 10%) !important;
       }
 
