--- a/style/less/g3w-skins/purple/g3w-queryresults.less
+++ b/style/less/g3w-skins/purple/g3w-queryresults.less
@@ -41,7 +41,7 @@
         border-top-color: @purple;
       }
 
-      table.feature_attributes tr:nth-child(even) {
+      table.feature_attributes tr:nth-child(even), table.fieldsoutofstructure tr:nth-child(even) {
         background: fade(@purple, 10%) !important;
       }
 
