--- a/style/less/g3w-skins/red/g3w-queryresults.less
+++ b/style/less/g3w-skins/red/g3w-queryresults.less
@@ -39,7 +39,7 @@
         border-top-color: @red;
       }
 
-      table.feature_attributes tr:nth-child(even) {
+      table.feature_attributes tr:nth-child(even), table.fieldsoutofstructure tr:nth-child(even) {
         background: fade(@red, 10%) !important;
       }
 
