added class query results

--- a/style/less/g3w-queryresults.less
+++ b/style/less/g3w-queryresults.less
@@ -15,10 +15,10 @@
     }
     .field_link {
       border-radius: 5px;
-      height: 25px;
-      min-width: 45px;
-      max-width: 80px;
       font-weight: bold;
+      &:hover{
+        color:#FFFFFF;
+      }
     }
     .queryresults {
       .tab-node.group {
