--- a/style/less/g3w-skins/blue/g3w-queryresults.less
+++ b/style/less/g3w-skins/blue/g3w-queryresults.less
@@ -49,11 +49,8 @@
         color: @light-blue;
       }
       .field_link {
-        background-color: lighten(@light-blue, 10%) !important;
-        border-color: lighten(@light-blue, 10%) !important;
-        &:hover {
-          background-color: @light-blue !important;
-        }
+        background-color: @light-blue !important;
+        border-color: @light-blue !important;
       }
       .queryresults-single {
         span.key {
