--- a/style/less/g3w-skins/purple/g3w-queryresults.less
+++ b/style/less/g3w-skins/purple/g3w-queryresults.less
@@ -49,8 +49,8 @@
         color: @purple;
       }
       .field_link {
-        background-color: lighten(@purple, 10%) !important;
-        border-color: lighten(@purple, 10%) !important;
+        background-color: @purple !important;
+        border-color: @purple !important;
       }
       .queryresults-single {
         span.key {
