--- a/style/less/g3w-skins/red/g3w-queryresults.less
+++ b/style/less/g3w-skins/red/g3w-queryresults.less
@@ -47,8 +47,8 @@
         color: @red;
       }
       .field_link {
-        background-color: lighten(@red, 10%) !important;
-        border-color: lighten(@red, 10%) !important;
+        background-color: @red !important;
+        border-color: @red !important;
       }
       .queryresults-single {
         span.key {
