hide admin utl if not provider and changed legend style

--- a/style/less/g3w-catalog-legend.less
+++ b/style/less/g3w-catalog-legend.less
@@ -14,7 +14,7 @@
     }
     .legend-item {
       width: 100%;
-      overflow: hidden;
+      overflow-x: auto;
       position: relative;
     }
 
