chenge credits ui and chenge some skin rules

--- a/style/less/g3w-skins/blue/g3w-skin.less
+++ b/style/less/g3w-skins/blue/g3w-skin.less
@@ -1,6 +1,6 @@
 .skin-blue {
   .skin-border-color {
-    border-color: @light-blue;
+    border-color: @light-blue !important;
   }
   .skin-background-color {
     background-color: @light-blue;
