--- a/style/less/g3w-skins/green/g3w-skin.less
+++ b/style/less/g3w-skins/green/g3w-skin.less
@@ -1,6 +1,6 @@
 .skin-green {
   .skin-border-color {
-    border-color: @green;
+    border-color: @green !important;
   }
   .skin-background-color {
     background-color: @green;
