--- a/style/less/g3w-skins/purple/g3w-skin.less
+++ b/style/less/g3w-skins/purple/g3w-skin.less
@@ -1,6 +1,6 @@
 .skin-purple {
   .skin-border-color {
-    border-color: @purple;
+    border-color: @purple !important;
   }
   .skin-background-color {
     background-color: @purple;
