--- a/style/less/g3w-skins/red/g3w-skin.less
+++ b/style/less/g3w-skins/red/g3w-skin.less
@@ -1,6 +1,6 @@
 .skin-red {
   .skin-border-color {
-    border-color: @red;
+    border-color: @red !important;
   }
   .skin-background-color {
     background-color: @red;
