--- a/style/less/g3w-skins/yellow/g3w-skin.less
+++ b/style/less/g3w-skins/yellow/g3w-skin.less
@@ -1,6 +1,6 @@
 .skin-yellow {
   .skin-border-color {
-    border-color: @yellow;
+    border-color: @yellow !important;
   }
   .skin-background-color {
     background-color: @yellow;
