fixed a issue on setContent and removed no cursor pointer if layer is disabled and adjusted long text in search

--- a/style/less/g3w-catalog.less
+++ b/style/less/g3w-catalog.less
@@ -129,7 +129,7 @@ Licensed under MIT
   cursor: pointer;
   &.disabled {
     color: darken(@color-white, 40%);
-    cursor: not-allowed;
+    //cursor: not-allowed;
   }
 }
 
