--- a/style/less/g3w-editing-panel.less
+++ b/style/less/g3w-editing-panel.less
@@ -56,8 +56,10 @@
     border-radius: 50%;
     padding: 10px;
     display: inline-block;
-    opacity: .4;
-
+    opacity: 0.4;
+    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.1), 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.1), 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.1), 0 4px 8px 0 rgba(0, 0, 0, 0.1);
     &.enabled {
       opacity: 1;
       cursor: pointer;
@@ -65,6 +67,7 @@
         //.box-shadow(0px,0px,1px);
       }
       &.toggled {
+        box-shadow: 0 0;
         background-color: #dddddd;
       }
     }
