changes some css rule for wps

--- a/style/less/app.less
+++ b/style/less/app.less
@@ -97,6 +97,7 @@ table.dataTable > tbody > tr.child ul.dtr-details > li {
 @import "g3w-skins/blue/g3w-form";
 @import "g3w-skins/blue/g3w-metadata";
 @import "g3w-skins/blue/g3w-tabs-form-query";
+@import "g3w-skins/blue/g3w-panel";
 
 //yellow
 @import "g3w-skins/yellow/g3w-skin";
@@ -114,6 +115,7 @@ table.dataTable > tbody > tr.child ul.dtr-details > li {
 @import "g3w-skins/yellow/g3w-form";
 @import "g3w-skins/yellow/g3w-metadata";
 @import "g3w-skins/yellow/g3w-tabs-form-query";
+@import "g3w-skins/yellow/g3w-panel";
 
 //red
 @import "g3w-skins/red/g3w-skin";
@@ -131,6 +133,7 @@ table.dataTable > tbody > tr.child ul.dtr-details > li {
 @import "g3w-skins/red/g3w-form";
 @import "g3w-skins/red/g3w-metadata";
 @import "g3w-skins/red/g3w-tabs-form-query";
+@import "g3w-skins/red/g3w-panel";
 
 //purple
 @import "g3w-skins/purple/g3w-skin";
@@ -148,6 +151,7 @@ table.dataTable > tbody > tr.child ul.dtr-details > li {
 @import "g3w-skins/purple/g3w-form";
 @import "g3w-skins/purple/g3w-metadata";
 @import "g3w-skins/purple/g3w-tabs-form-query";
+@import "g3w-skins/purple/g3w-panel";
 
 //green
 @import "g3w-skins/green/g3w-skin";
@@ -165,4 +169,6 @@ table.dataTable > tbody > tr.child ul.dtr-details > li {
 @import "g3w-skins/green/g3w-form";
 @import "g3w-skins/green/g3w-metadata";
 @import "g3w-skins/green/g3w-tabs-form-query";
+@import "g3w-skins/green/g3w-panel";
+
 
