--- a/style/less/g3w-sidebar.less
+++ b/style/less/g3w-sidebar.less
@@ -7,6 +7,18 @@
   color: white;
   .g3w-sidebarpanel {
     padding: 10px 15px 10px 15px;
+    .g3w-panel {
+      .g3w-panel-form {
+        &.disabled {
+
+        }
+        button.run_button {
+          margin-top: 5px;
+          font-weight: bold;
+        }
+      }
+
+    }
   }
   .g3w-sidebarpanel-placeholder {
     margin-top: 10px;
