--- a/style/less/g3w-sidebar.less
+++ b/style/less/g3w-sidebar.less
@@ -3,6 +3,15 @@
 @sidebar-width: 350px;
 @control-sidebar-width: 450px;
 
+.main-sidebar{
+    &.iframe{
+      padding-top:0 !important;
+      a.sidebar-aside-toggle {
+        top: 0! important;
+      }
+    }
+}
+
 .sidebar {
   color: white;
   .g3w-sidebarpanel {
