moved chengeProject o sdk and changed style to datatable

--- a/style/less/g3w-overwrite-extenal.less
+++ b/style/less/g3w-overwrite-extenal.less
@@ -1,3 +1,8 @@
 table.dataTable.no-footer {
   border-bottom: 0 !important;
 }
+
+.dataTables_wrapper.no-footer .dataTables_scrollBody {
+  border-bottom: 1px solid #dcdcdc !important;
+}
+
