removed css overflow property to layer legend. Now is visible on bottom of the sidebar. Added test folder to gitignore

--- a/style/less/g3w-catalog-legend.less
+++ b/style/less/g3w-catalog-legend.less
@@ -14,7 +14,7 @@
     }
     .legend-item {
       width: 100%;
-      overflow-x: auto;
+      //overflow-x: auto;
       position: relative;
     }
 
