--- a/style/less/g3w-mapcontrols.less
+++ b/style/less/g3w-mapcontrols.less
@@ -5,7 +5,7 @@
   button {
     display: block;
     margin: 0;
-    margin-left: 2px;
+    //margin-left: 2px;
     padding: 2px 6px;
     text-decoration: none;
     text-align: center;
