changed sidebar item and added backgorund to mouse piostion colotr

--- a/style/less/g3w-mapcontrols.less
+++ b/style/less/g3w-mapcontrols.less
@@ -35,8 +35,11 @@
 
 .ol-mouse-position {
   top: auto;
+  margin-top: 3px;
   height: 20px;
   font-weight: bold;
+  background: rgba(255, 255, 255, 0.8);
+  padding: 3px;
 }
 
 .ol-mouse-position-default {
